syntax = "proto3";

option csharp_namespace = "LuckyFoodSystem.UserRolesApiGrpc";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetAllUsers(google.protobuf.Empty) returns (ListReply);
  rpc GetUserByName(GetUserByNameRequest) returns (UserReply);
  rpc CreateUser(CreateUserRequest) returns (UserReply);
  rpc UpdateUser(UpdateUserRequest) returns (UserReply);
  rpc DeleteUser(DeleteUserRequest) returns (UserReply);
  rpc DeleteUserFromRole(DeleteUserFromRoleRequest) returns (UserReply);
}

message ListReply{
  repeated UserReply Users = 1;
}

message UserReply{
  string id = 1;
  string user_name=2;
  string email = 3;
  google.protobuf.StringValue phone_number = 4;
}

message CreateUserRequest{
	string user_name = 1;
	string email = 2;
	bool email_confirmed = 3;
	string password = 4;
}
message AddUserToRoleRequest{
	string user_name = 1;
	string role_name = 2;
}
message ChangePasswordRequest{
	string user_name = 1;
	string current_password = 2;
	string new_password = 3;
}
message GetUserByNameRequest{
	string name = 1;
}
message DeleteUserFromRoleRequest{
	string user_name = 1;
	string role_name = 2;
}
message DeleteUserRequest{
	string id = 1;
}
message UpdateUserRequest{
	string id = 1;
	UserReply User = 2;
}